<resources>
    <string name="app_name">Conversion v2</string>
    <string name="imgUser">TODO</string>
    <string name="lblusername">Username:</string>
    <string name="txtUsername">Enter your username</string>
    <string name="lblpassword">Password:</string>
    <string name="txtPassword">Enter your password</string>
    <string name="btnlogin">Login</string>
    <string name="btncancel">Cancel</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="imgBackground">TODO</string>
    <string name="bgConv">TODO</string>
    <string name="imgConvBg">TODO</string>
    <string name="txtConverter">CONVERTER</string>
    <string name="imgConverter">TODO</string>
    <string name="enter_a_number">Enter a number</string>
    <string name="kilograms">Kilograms</string>
    <string name="pounds">Pounds</string>
    <string name="converted_unit">Converted Unit:</string>
    <string name="convert">Convert</string>
    <string name="imgHomeIcon">TODO</string>
    <string name="imgHomeBg">TODO</string>
    <string name="lbltutorialBg">TUTORIAL</string>
    <string name="imgTutBg">TODO</string>
    <string name="imgQuizBg">TODO</string>
    <string name="lblquiz">QUIZ</string>
    <string name="imgAboutBg">TODO</string>
    <string name="lblAbout">ABOUT</string>
    <string name="lblhome">HOME</string>
    <string name="btnselect">Select</string>
    <string name="homeFrag">Home</string>
    <string name="tutorialFrag">Tutorial</string>
    <string name="conversionFrag">Conversion</string>
    <string name="quizFrag">Quiz</string>
    <string name="aboutFrag">About</string>
    <string name="homeFragment">Home</string>
    <string name="tutorialFragment">Tutorial</string>
    <string name="conversionFragment">Conversion</string>
    <string name="quizFragment">Quiz</string>
    <string name="aboutFragment">About</string>
    <string name="txtDescription">CONVERTER is an application that converts the input number of the user either in kilograms or pounds. It also has other features such as interactive quiz, tutorial, and many more!</string>
    <string name="txtInstruction">Test your knowledge about unit conversion. Try answering the quiz!</string>
    <string name="txtQ1">Q1. What is 15kg in pounds?</string>
    <string name="login">Logout</string>
    <string name="login2">Logout</string>
</resources>