<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.activity4p1_supact.WelcomeFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imgBackground"
            android:layout_width="430dp"
            android:layout_height="746dp"
            android:contentDescription="@string/imgBackground"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/bg" />

        <ImageView
            android:id="@+id/imgUser"
            android:layout_width="241dp"
            android:layout_height="265dp"
            android:layout_marginTop="53dp"
            android:contentDescription="@string/imgUser"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/imguser" />

        <TextView
            android:id="@+id/lblUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="120dp"
            android:text="@string/lblusername"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgUser"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/txtUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="108dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/txtUsername"
            android:inputType="textPersonName"
            android:textColorHint="#E0F7FA"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/lblUsername"
            app:layout_constraintTop_toBottomOf="@+id/imgUser"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/lblPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="68dp"
            android:text="@string/lblpassword"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblUsername"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/txtPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="45dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/txtPassword"
            android:inputType="textPassword"
            android:textColorHint="#FFFFFF"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/lblPassword"
            app:layout_constraintTop_toBottomOf="@+id/txtUsername"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="90dp"
            android:layout_marginTop="56dp"
            android:text="@string/btnlogin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtPassword" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            android:layout_marginEnd="90dp"
            android:backgroundTint="#474747"
            android:text="@string/btncancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtPassword" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>