<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.activity4p1_supact.ConversionFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imgConvBg"
            android:layout_width="459dp"
            android:layout_height="769dp"
            android:contentDescription="@string/imgConvBg"
            android:src="@drawable/bg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/txtConverter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="80dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/txtConverter"
            android:textColor="#FFFFFF"
            android:textSize="45sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imgConverter"
            android:layout_width="75dp"
            android:layout_height="68dp"
            android:layout_marginTop="75dp"
            android:layout_marginEnd="50dp"
            android:src="@drawable/conv_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/imgConverter" />

        <EditText
            android:id="@+id/txtInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:ems="10"
            android:hint="@string/enter_a_number"
            android:inputType="number"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtConverter"
            tools:ignore="TouchTargetSizeCheck"
            android:autofillHints="" />

        <RadioGroup
            android:id="@+id/unit_options"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-30dp"
            android:checkedButton="@id/option_kilograms"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtInput">

            <RadioButton
                android:id="@+id/option_kilograms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="90dp"
                android:layout_marginTop="50dp"
                android:text="@string/kilograms"
                android:textColor="#FFFFFF"
                tools:ignore="TextContrastCheck" />

            <RadioButton
                android:id="@+id/option_pounds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="90dp"
                android:text="@string/pounds"
                android:textColor="#FFFFFF"
                tools:ignore="TextContrastCheck" />
        </RadioGroup>

        <TextView
            android:id="@+id/txtOutput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/converted_unit"
            android:textColor="#283593"
            android:textSize="35sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/unit_options" />

        <Button
            android:id="@+id/bttnConvert"
            android:layout_width="122dp"
            android:layout_height="58dp"
            android:layout_marginTop="80dp"
            android:backgroundTint="#2196F3"
            android:text="@string/convert"
            android:textColor="#212121"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtOutput"
            tools:ignore="TextContrastCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>