<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.activity4p1_supact.AboutFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imgAboutBg"
            android:layout_width="437dp"
            android:layout_height="762dp"
            android:src="@drawable/bg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ImageContrastCheck"
            android:contentDescription="@string/imgAboutBg" />

        <TextView
            android:id="@+id/lblAbout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/lblAbout"
            android:textColor="#FFFFFF"
            android:textSize="34sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtConverter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="150dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/txtConverter"
            android:textColor="#FFFFFF"
            android:textSize="45sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imgConverter"
            android:layout_width="75dp"
            android:layout_height="68dp"
            android:layout_marginTop="145dp"
            android:layout_marginEnd="50dp"
            android:contentDescription="@string/imgConverter"
            android:src="@drawable/conv_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtDescription"
            android:layout_width="347dp"
            android:layout_height="329dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="55dp"
            android:layout_marginEnd="15dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/txtDescription"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="34sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtConverter"
            tools:ignore="TextContrastCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>