<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.activity4p1_supact.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imgHomeBg"
            android:layout_width="442dp"
            android:layout_height="747dp"
            android:src="@drawable/bg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/imgHomeBg" />

        <ImageView
            android:id="@+id/imgHomeIcon"
            android:layout_width="241dp"
            android:layout_height="265dp"
            android:contentDescription="@string/imgHomeIcon"
            android:src="@drawable/conv_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblHome" />

        <RadioGroup
            android:id="@+id/user_options"
            android:checkedButton="@id/option_read"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgHomeIcon">


            <RadioButton
                android:id="@+id/option_tutorial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="139dp"
                android:layout_marginLeft="139dp"
                android:layout_marginTop="68dp"
                android:layout_marginEnd="160dp"
                android:layout_marginRight="160dp"
                android:text="Tutorial"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imgUser"
                tools:ignore="TextContrastCheck" />

            <RadioButton
                android:id="@+id/option_conversion"
                android:layout_width="122dp"
                android:layout_height="43dp"
                android:layout_marginStart="139dp"
                android:layout_marginLeft="139dp"
                android:layout_marginEnd="170dp"
                android:layout_marginRight="170dp"
                android:text="Conversion"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/option_read"
                tools:ignore="TouchTargetSizeCheck" />

            <RadioButton
                android:id="@+id/option_quiz"
                android:layout_width="127dp"
                android:layout_height="47dp"
                android:layout_marginStart="139dp"
                android:layout_marginLeft="139dp"
                android:layout_marginEnd="160dp"
                android:layout_marginRight="160dp"
                android:text="Quiz"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/option_play"
                tools:ignore="TouchTargetSizeCheck" />

        </RadioGroup>

        <Button
            android:id="@+id/btnSelect"
            android:layout_width="122dp"
            android:layout_height="58dp"
            android:layout_marginTop="50dp"
            android:backgroundTint="#2196F3"
            android:text="@string/btnselect"
            android:textColor="#212121"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_options"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/lblHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/lblhome"
            android:textColor="#FFFFFF"
            android:textSize="34sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>