<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.activity4p1_supact.TutorialFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imgTutBg"
            android:layout_width="431dp"
            android:layout_height="748dp"
            android:src="@drawable/bg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/imgTutBg" />

        <TextView
            android:id="@+id/lblTutorial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/lbltutorialBg"
            android:textColor="#FFFFFF"
            android:textSize="34sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtHowTo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="How to Use the Converter App?"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblTutorial" />

        <TextView
            android:id="@+id/textStep1"
            android:layout_width="291dp"
            android:layout_height="54dp"
            android:layout_marginTop="50dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="Step 1: Go to the Conversion section of the app."
            android:textAlignment="textStart"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtHowTo" />

        <TextView
            android:id="@+id/textStep2"
            android:layout_width="293dp"
            android:layout_height="58dp"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="Step 2: Select the desired unit for the conversion."
            android:textAlignment="textStart"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textStep1" />

        <TextView
            android:id="@+id/textStep3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="100dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="Step 3: Enter a number."
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.475"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textStep2" />

        <TextView
            android:id="@+id/textStep4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="Step 4: Click the &quot;CONVERT&quot; button."
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.483"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textStep3" />

        <TextView
            android:id="@+id/textStep5"
            android:layout_width="290dp"
            android:layout_height="54dp"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="Step 5: Check the results in the &quot;Conveted Unit&quot; area."
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.487"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textStep4" />

        <TextView
            android:id="@+id/txtConverter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="570dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/txtConverter"
            android:textColor="#FFFFFF"
            android:textSize="45sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imgConverter"
            android:layout_width="75dp"
            android:layout_height="68dp"
            android:layout_marginTop="570dp"
            android:layout_marginEnd="50dp"
            android:contentDescription="@string/imgConverter"
            android:src="@drawable/conv_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>